--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html><head>
-<title>名门国际导航站</title>
+<title>测试</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style-new.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
@@ -176,7 +176,7 @@ function time(){
 		 </a> 
 	 </li>
 	 <li class="lis"> 
-		 <a href="http://www.mm188.vip" target="_blank" >
+		 <a href="http://youcaishen.net" target="_blank" >
 			 <img src="images/mmlogo.png">
 			 <span class="spa-href" >名门国际-站点5</span>
 			 <button class="buttonopen">直接打开</button>
@@ -190,12 +190,8 @@ function time(){
 <div class="linetit linetit4"><span>由于360恶意提示风险网站，严重影响游戏体验，推荐使用以下浏览器进行游戏</span></div>
 <div class="browserbox">
   <ul>
-    <li><a href="https://www.ub66.com/" rel="nofollow" target="_blank"><img src="images/ie1.png"><em>寰宇浏览器</em></a></li>
-    <li><a href="http://www.maxthon.cn/" rel="nofollow" target="_blank"><img src="images/ie2.png"><em>遨游浏览器</em></a></li>
     <li><a href="http://www.google.cn/intl/zh-CN/chrome/browser/desktop/index.html" rel="nofollow" target="_blank"><img src="images/ie3.png"><em>谷歌浏览器</em></a></li>
-    <li><a href="http://www.uc.cn/" rel="nofollow" target="_blank"><img src="images/ie4.png"><em>UC浏览器</em></a></li>
     <li><a href="http://www.firefox.com.cn/" rel="nofollow" target="_blank"><img src="images/ie5.png"><em>火狐浏览器</em></a></li>
-    <li><a href="http://www.theworld.cn/" rel="nofollow" target="_blank"><img src="images/ie6.png"><em>世界之窗浏览器</em></a></li>
   </ul>
 </div>
 
