--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html><head>
-<title>名门国际导航站</title>
+<title>测试</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style-new.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
@@ -97,7 +97,7 @@ function time(){
 <!--线路检测一-->
 <div class="xljc2 wrap">
   <div class="tit">
-	  <img class="fl" src="images/tit_01.png"> 
+	  <h2 style="color: rgba(1,12,78,1.00)">名门国际线路</h2>
   </div>
   <div class="testing">
   <ul class="list">
@@ -143,7 +143,7 @@ function time(){
 <!--线路检测二-->
 <div class="xljc2 wrap">
   <div class="tit">
-	  <img class="fl" src="images/tit_02.png"> 
+	  <h2 style="color: rgba(1,12,78,1.00)">名门国际VIP线路</h2> 
   </div>
   <div class="testing">
   <ul class="list">
@@ -176,7 +176,7 @@ function time(){
 		 </a> 
 	 </li>
 	 <li class="lis"> 
-		 <a href="http://www.mm188.vip" target="_blank" >
+		 <a href="http://youcaishen.net" target="_blank" >
 			 <img src="images/mmlogo.png">
 			 <span class="spa-href" >名门国际-站点5</span>
 			 <button class="buttonopen">直接打开</button>
@@ -187,15 +187,11 @@ function time(){
 </div>
 
 <!--推荐浏览器-->
-<div class="linetit linetit4"><span>由于360恶意提示风险网站，严重影响游戏体验，推荐使用以下浏览器进行游戏</span></div>
+<div class="linetit linetit4"><span><a style="font-size: 20px;color: rgba(1,12,78,1.00);"><strong>推荐浏览器</strong></a> 由于360恶意提示风险网站，严重影响游戏体验，推荐使用以下浏览器进行游戏</span></div>
 <div class="browserbox">
   <ul>
-    <li><a href="https://www.ub66.com/" rel="nofollow" target="_blank"><img src="images/ie1.png"><em>寰宇浏览器</em></a></li>
-    <li><a href="http://www.maxthon.cn/" rel="nofollow" target="_blank"><img src="images/ie2.png"><em>遨游浏览器</em></a></li>
     <li><a href="http://www.google.cn/intl/zh-CN/chrome/browser/desktop/index.html" rel="nofollow" target="_blank"><img src="images/ie3.png"><em>谷歌浏览器</em></a></li>
-    <li><a href="http://www.uc.cn/" rel="nofollow" target="_blank"><img src="images/ie4.png"><em>UC浏览器</em></a></li>
     <li><a href="http://www.firefox.com.cn/" rel="nofollow" target="_blank"><img src="images/ie5.png"><em>火狐浏览器</em></a></li>
-    <li><a href="http://www.theworld.cn/" rel="nofollow" target="_blank"><img src="images/ie6.png"><em>世界之窗浏览器</em></a></li>
   </ul>
 </div>
 
@@ -282,10 +278,8 @@ function time(){
               <p>DNS防劫持软件可以有效地帮您进入名门国际主域名：<a href="https://www.mm94168.com"  style="color: #FF0004">https://www.mm94168.com</a></p>
               <p class="btn_con">安装步骤：<br>下载软件→解压→打开→启用防劫持→进入官网。</p>
               <a href="https://www.mm94168.com/promotion_vip.jhtml">
-              <img class="btn_vip" src="images/btn_with.png">
-              <img class="btn_vip" src="images/btn_with.png">
+              <p class="btn_vipp">点击加入我们的VIP计划，享受更多福利哦！</p>
               </a>
-              <p class="btn_vipp">加入我们的VIP计划，享受更多福利哦！</p>
             </div>
           </ul>
         </div>
