--- a/wap/index.html
+++ b/wap/index.html
@@ -76,7 +76,7 @@ function shoucang(sTitle,sURL) {
 <!--线路检测一-->
 <div class="xljc2 wrap">
   <div class="tit">
-	  <img class="fl" src="images/tit_01.png"> 
+	 <h2 style="color: rgba(1,12,78,1.00)">名门国际线路</h2>  
 
   </div>
   <div class="testing">
@@ -109,7 +109,7 @@ function shoucang(sTitle,sURL) {
 <!--线路检测二-->
 <div class="xljc2 wrap">
   <div class="tit">
-	  <img class="fl" src="images/tit_02.png"> 
+	  <h2 style="color: rgba(1,12,78,1.00)">名门国际VIP线路</h2> 
   </div>
   <div class="testing">
   <ul class="list">
@@ -140,15 +140,13 @@ function shoucang(sTitle,sURL) {
 
 
 <!--推荐浏览器-->
-<div class="linetit linetit4"></div>
+<div class="linetit linetit4"><h2 style="color: rgba(1,12,78,1.00)">推荐浏览器</h2></div>
+
 <div class="browserbox">
   <ul>
-    <li><a href="https://www.ub66.com/" rel="nofollow" target="_blank"><img src="images/ie1.png"><em>寰宇浏览器</em></a></li>
-    <li><a href="http://www.maxthon.cn/mx5/mobile/?f=mx5" rel="nofollow" target="_blank"><img src="images/ie2.png"><em>遨游浏览器</em></a></li>
     <li><a href="http://www.google.cn/intl/zh-CN/chrome/browser/desktop/index.html" rel="nofollow" target="_blank"><img src="images/ie3.png"><em>谷歌浏览器</em></a></li>
-    <li><a href="http://www.uc.cn/ucbrowser/download/" rel="nofollow" target="_blank"><img src="images/ie4.png"><em>UC浏览器</em></a></li>
     <li><a href="http://www.firefox.com.cn/" rel="nofollow" target="_blank"><img src="images/ie5.png"><em>火狐浏览器</em></a></li>
-    <li><a href="http://www.theworld.cn/" rel="nofollow" target="_blank"><img src="images/ie6.png"><em>世界之窗浏览器</em></a></li>
+
   </ul>
 </div>
 
