--- a/wap/index.html
+++ b/wap/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html><head>
-<title>测试</title>
+<title>名门国际导航站</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style-new.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
